correction overflow

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,8 +3,7 @@
     font-weight: 400;
 }
 
-html,
-body {
+main {
     overflow-x: hidden;
 }
 
