--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,6 @@
 nav {
     position: sticky;
     top: 0;
-    left: 0;
     height: 50px;
     padding-top: 16px;
     text-align: center;
